2005-11-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* include/hal_io.h (struct cyg_hal_sys_old_stat): Make the
	structure match the kernel version otherwise the stack gets
	corrupt and we die 'orribly. Added cyg_hal_sys_new_stat for when
	using the new?stat() calls.
	* src/synth_syscall.c (cyg_hal_sys_ftok): use the correct structure 
        member names and use the newstat system call so we get 
	values back which are compatible with glibc ftok() function.
	* tests/ftok.c (new): Test case for the cyg_hal_sys_ftok() 
        function added in the previous patch.

2005-10-19  Alexander Neundorf <neundorf@kde.org>

	* src/synth_syscall.c: add cyg_hal_sys_ftok().

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth_diag.c (hal_diag_write_char): Compiler warning fix.
	* src/synth_intr.c (synth_auxiliary_instantiate): Ditto
	
2005-06-26  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_intr.c (synth_hardware_init): extract bogomips rating
	for use by HAL_DELAY_US()

	* include/hal_intr.h: add #include of <cyg/hal/var_intr.h> for
	HAL_DELAY_US().

2005-03-11  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_intr.c (synth_hardware_init): allow the platform to
	customize the sigaction structures.

	* include/hal_io.h: add more signal-related definitions

	* cdl/hal_synth.cdl: change the clock calculations, so that users
	only need to specify RTC_PERIOD

2004-12-14  Alexander Neundorf <neundorf@kde.org>
	    Andrew Lunn        <andrew.lunn@ascom.ch>

	* include/hal_io.h: Add cyg_hal_sys_shmget(), cyg_hal_sys_shmat()
	and cyg_hal_sys_shmdt() system calls
	* src/synth_syscalls.c: Implementations of cyg_hal_sys_shmget(), 
	cyg_hal_sys_shmat() and cyg_hal_sys_shmdt(). Moved 
	cyg_hal_sys_mmap() from the flash driver to here.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_intr.h (HAL_PLATFORM_RESET): Added missing ;

2004-08-04  Alexander Neundorf <alexander.neundorf@jenoptik.com>

	* include/hal_io.h: Add cyg_hal_sys_mkdir() system call