@@ -6,14 +6,14 @@
 
 MEMORY
 {
-    rom : ORIGIN = 0x1000000, LENGTH = 0x800000
-    ram : ORIGIN = 0x2000000, LENGTH = 0x800000
+    rom : ORIGIN = 0x01000000, LENGTH = 0x800000
+    ram : ORIGIN = 0x02000000, LENGTH = 0x800000
 }
 
 SECTIONS
 {
     SECTIONS_BEGIN
-    SECTION_vectors (rom, 0x1000000, LMA_EQ_VMA)
+    SECTION_vectors (rom, 0x01000000, LMA_EQ_VMA)
     SECTION_text (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_fini (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_rodata1 (rom, ALIGN (0x8), LMA_EQ_VMA)
@@ -23,9 +23,10 @@ SECTIONS
     SECTION_eh_frame (rom, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_rel__got (rom, ALIGN (0x1), LMA_EQ_VMA)
     SECTION_gcc_except_table (rom, ALIGN (0x1), LMA_EQ_VMA)
-    SECTION_data (ram, 0x2000000, LMA_EQ_VMA)
+    SECTION_data (ram, 0x02000000, LMA_EQ_VMA)
     SECTION_sbss (ram, ALIGN (0x4), LMA_EQ_VMA)
     SECTION_bss (ram, ALIGN (0x10), LMA_EQ_VMA)
     CYG_LABEL_DEFN(__heap1) = ALIGN (0x10);
+    SECTIONS_HEAP(ram, __heap1, 0x02800000)
     SECTIONS_END
 }
