@@ -1,3 +1,8 @@
+2005-11-19  Bart Veer  <bartv@ecoscentric.com>
+
+	* include/pkgconf/mlt_synth_i386_rom.ldi: add new heap section to
+	avoid the use of brk()
+
 2005-11-05  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/syscall-i386-linux-1.0.S: renamed prev_?stat to old?stat to
